compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__reserved_word_fn.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn class() {\n  Nil\n}\n"
---
----- SOURCE CODE
pub fn class() {
  Nil
}


----- COMPILED JAVASCRIPT
export function class$() {
  return undefined;
}
