compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__reserved_word_imported_alias.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "import for.{class as while} as function\n\npub fn export() {\n  let delete = function.class\n  while()\n}\n"
---
----- SOURCE CODE
import for.{class as while} as function

pub fn export() {
  let delete = function.class
  while()
}


----- COMPILED JAVASCRIPT
import * as $function from "../for.mjs";
import { class$ as while$ } from "../for.mjs";

export function export$() {
  let delete$ = $function.class$;
  return while$();
}
