compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__star_slash_in_jsdoc.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\n/// */\n///\npub fn main() { 1 }\n"
---
----- SOURCE CODE

/// */
///
pub fn main() { 1 }


----- COMPILED JAVASCRIPT
/**
 * *\/
 */
export function main() {
  return 1;
}
