compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__tail_call.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn count(xs, n) {\n  case xs {\n    [] -> n\n    [_, ..xs] -> count(xs, n + 1)\n  }\n}\n"
---
----- SOURCE CODE

pub fn count(xs, n) {
  case xs {
    [] -> n
    [_, ..xs] -> count(xs, n + 1)
  }
}


----- COMPILED JAVASCRIPT
import { Empty as $Empty } from "../gleam.mjs";

export function count(xs, n) {
  while (true) {
    if (xs instanceof $Empty) {
      return n;
    } else {
      let xs$1 = xs.tail;
      xs = xs$1;
      n = n + 1;
    }
  }
}
